# kingparyaj

./: .env.example  .gitignore  Dockerfile.flask  Dockerfile.streamlit  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf  pyproject.toml  requirements.txt
Docker/: Dockerfile  nginx.conf
app/: config.py  dependencies.py  main.py
app/api/v1/: __init__.py  admin.py  agent.py  auth.py  keno.py  lucky.py  reports.py  tickets.py  users.py  wallet.py
app/api/websockets/: draws.py  manager.py
app/core/: __init__.py  csrf.py  database.py  exceptions.py  logger.py  redis_client.py  security.py
app/models/: __init__.py  audit.py  base.py  bureau.py  enums.py  keno.py  lucky.py  notification.py  promotion.py  responsible.py  ticket.py  transaction.py  user.py  wallet.py
app/payments/: moncash.py
app/routes/: admin.py  agent.py
app/schemas/: __init__.py  admin.py  audit.py  bureau.py  common.py  keno.py  lucky.py  notification.py  promotion.py  responsible.py  ticket.py  transaction.py  user.py  wallet.py
app/services/: __init__.py  audit_service.py  auth_service.py  base.py  bureau_service.py  draw_scheduler.py  keno_service.py  lucky_service.py  notification_service.py  promotion_service.py  responsible_service.py  rng_service.py  ticket_service.py  transaction_service.py  user_service.py  wallet_service.py
app/templates/admin/: base.html  dashboard.html  login.html
app/templates/admin/agents/: create.html  detail.html  edit.html  index.html
app/templates/admin/audit/: detail.html  logs.html
app/templates/admin/bureaus/: create.html  detail.html  edit.html  index.html
app/templates/admin/games/keno/: config.html  draws.html  statistics.html
app/templates/admin/games/lucky/: config.html  statistics.html
app/templates/admin/promotions/: create.html  detail.html  edit.html  index.html
app/templates/admin/settings/: general.html  security.html
app/templates/admin/tickets/: detail.html  index.html
app/templates/admin/transactions/: detail.html  index.html
app/templates/admin/users/: detail.html  edit.html  index.html  kyc.html
app/templates/agent/: base.html  casier.html  dashboard.html  history.html  keno.html  login.html  lucky.html  profile.html  reports.html  tickets.html
app/workers/: __init__.py  celery.py  cleanup_worker.py  draw_worker.py  monitoring_worker.py  notification_worker.py
migrations/: env.py  script.py.mako
migrations/versions/: 331737ed4e0f_initial_migration_all_models.py
scripts/: seed_database.py
