# pyproject.toml
# Configuration complète du projet Parier Keno & Lucky Haïti
# Compatible avec Poetry, Black, Isort, MyPy, Pytest, Ruff

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ==================== PROJET ====================
[project]
name = "parier-keno"
version = "1.0.0"
description = "Plateforme de paris Keno & Lucky pour Haïti - Licence LEH"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Propriétaire"}
authors = [
    {name = "Parier Keno Haiti", email = "contact@parierkeno.ht"}
]
maintainers = [
    {name = "Parier Keno Haiti", email = "contact@parierkeno.ht"}
]
keywords = [
    "keno",
    "lucky",
    "gambling",
    "lottery",
    "haiti",
    "moncash",
    "natcash",
    "fastapi",
    "parier"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Office/Business :: Financial",
]

# ==================== DÉPENDANCES ====================
dependencies = [
    # Core Framework
    "fastapi>=0.104.1,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # Database
    "sqlalchemy>=2.0.23,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.12.1,<2.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    
    # Redis
    "redis>=5.0.1,<6.0.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.1.2,<5.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    
    # Validation
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "email-validator>=2.1.0,<3.0.0",
    
    # HTTP
    "httpx>=0.25.1,<1.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    
    # Templates
    "jinja2>=3.1.2,<4.0.0",
    
    # Payments
    "stripe>=7.6.0,<8.0.0",  # Optionnel
    
    # Utils
    "qrcode>=7.4.2,<8.0.0",
    "Pillow>=10.1.0,<11.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "tenacity>=8.2.3,<9.0.0",
    
    # Logging
    "python-json-logger>=2.0.7,<3.0.0",
    
    # Workers
    "celery>=5.3.4,<6.0.0",
    
    # WebSocket
    "websockets>=12.0,<13.0.0",
    
    # Monitoring
    "prometheus-client>=0.19.0,<1.0.0",
    
    # SMS (Optionnel)
    "twilio>=8.0.0,<9.0.0",  # Optionnel
]

# ==================== DÉPENDANCES OPTIONNELLES ====================
[project.optional-dependencies]
dev = [
    "black>=23.11.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "ipython>=8.17.2,<9.0.0",
    "ipdb>=0.13.13,<1.0.0",
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=20.1.0,<21.0.0",
    "httpx>=0.25.1,<1.0.0",
    "py-spy>=0.3.14,<1.0.0",
    "memory-profiler>=0.61.0,<1.0.0",
]

moncash = [
    "twilio>=8.0.0,<9.0.0",  # SMS
]

natcash = [
    "requests>=2.31.0,<3.0.0",
]

# ==================== SCRIPTS ====================
[project.scripts]
run = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
migrate = "alembic upgrade head"
make-migration = "alembic revision --autogenerate -m"
test = "pytest tests/ -v"
lint = "black app/ && isort app/ && flake8 app/"
format = "black app/ && isort app/"
type-check = "mypy app/"
clean = "find . -type d -name '__pycache__' -exec rm -rf {} + && find . -type f -name '*.pyc' -delete"

# ==================== URLS ====================
[project.urls]
Homepage = "https://parierkeno.ht"
Documentation = "https://docs.parierkeno.ht"
Repository = "https://github.com/parierkeno/parier-keno"
Issues = "https://github.com/parierkeno/parier-keno/issues"
Changelog = "https://github.com/parierkeno/parier-keno/releases"

# ==================== BLACK ====================
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations/versions/
)/
'''

# ==================== ISORT ====================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app"]
known_third_party = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "redis",
    "celery",
    "httpx",
    "jose",
    "passlib",
    "bcrypt",
    "jinja2",
    "qrcode",
    "PIL",
    "dateutil",
    "tenacity",
    "prometheus_client"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ==================== MYPY ====================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
exclude = [
    "migrations/",
    "tests/",
    "venv/",
    ".venv/",
    "build/",
    "dist/",
]
[[tool.mypy.overrides]]
module = [
    "app.models.*",
    "app.schemas.*",
    "app.services.*",
    "app.api.*",
]
ignore_errors = false

# ==================== PYTEST ====================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
    "async: Async tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==================== COVERAGE ====================
[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "app/workers/*",
    "app/migrations/*",
    "app/config.py",
    "app/main.py",
    "app/core/database.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# ==================== RUFF ====================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # missing type annotation for *args, **kwargs
    "SIM105",  # use try/except with contextlib.suppress
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "B011", "B904"]
"app/api/**/*.py" = ["B904"]
"app/models/**/*.py" = ["ANN", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "redis",
    "celery",
    "httpx",
    "jose",
    "passlib",
    "bcrypt",
    "jinja2",
    "qrcode",
    "PIL",
    "dateutil",
    "tenacity",
    "prometheus_client"
]

# ==================== PRE-COMMIT ====================
[tool.pre-commit]
default_stages = ["commit", "push"]

[tool.pre-commit.hooks]
black = {repo = "https://github.com/psf/black", rev = "23.11.0", hooks = ["black"]}
isort = {repo = "https://github.com/PyCQA/isort", rev = "5.12.0", hooks = ["isort"]}
flake8 = {repo = "https://github.com/PyCQA/flake8", rev = "6.1.0", hooks = ["flake8"]}
mypy = {repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.7.0", hooks = ["mypy"]}
ruff = {repo = "https://github.com/astral-sh/ruff-pre-commit", rev = "v0.1.6", hooks = ["ruff"]}

# ==================== CELERY ====================
[tool.celery]
broker_url = "redis://localhost:6379/0"
result_backend = "redis://localhost:6379/0"
task_serializer = "json"
accept_content = ["json"]
result_serializer = "json"
timezone = "America/Port-au-Prince"
enable_utc = true

# ==================== LOGGING ====================
[tool.logging]
level = "INFO"
format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"

# ==================== DEPENDENCY GROUPS ====================
[tool.poetry]
# Configuration pour Poetry (si utilisé)
name = "parier-keno"
version = "1.0.0"
description = "Plateforme de paris Keno & Lucky pour Haïti"
authors = ["Parier Keno Haiti <contact@parierkeno.ht>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
factory-boy = "^3.3.0"
faker = "^20.1.0"
httpx = "^0.25.1"

[tool.poetry.group.moncash.dependencies]
twilio = "^8.0.0"

[tool.poetry.group.natcash.dependencies]
requests = "^2.31.0"

# ==================== VERSION ====================
[tool.bumpversion]
current_version = "1.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:-(?P<release>[a-z]+)(?P<dev>\\d+)?)?"
serialize = [
    "{major}.{minor}.{patch}-{release}{dev}",
    "{major}.{minor}.{patch}"
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Release {new_version}"
commit = true
commit_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false

[tool.bumpversion.files]
"pyproject.toml" = ["version = \"{current_version}\""]
"app/__init__.py" = ["__version__ = \"{current_version}\""]
"README.md" = ["Version {current_version}"]

# ==================== EXTRAS ====================
[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
"app" = ["templates/**/*", "static/**/*", "static/*"]